--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
+    "postinstall": "patch-package",
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
@@ -10,18 +11,54 @@
     "eject": "expo eject"
   },
   "dependencies": {
-    "expo": "~45.0.0",
-    "expo-status-bar": "~1.3.0",
+    "@emotion/native": "11.9.3",
+    "@emotion/react": "11.9.3",
+    "@expo-google-fonts/inter": "0.2.2",
+    "@gorhom/bottom-sheet": "4.3.2",
+    "@react-navigation/bottom-tabs": "6.3.1",
+    "@react-navigation/native": "6.0.10",
+    "@react-navigation/native-stack": "6.6.2",
+    "@th3rdwave/react-navigation-bottom-sheet": "0.2.1",
+    "expo": "45.0.5",
+    "expo-application": "4.1.0",
+    "expo-blur": "11.1.0",
+    "expo-dev-client": "1.0.0",
+    "expo-file-system": "14.0.0",
+    "expo-font": "10.1.0",
+    "expo-linear-gradient": "11.3.0",
+    "expo-local-authentication": "12.2.0",
+    "expo-localization": "13.0.0",
+    "expo-splash-screen": "0.15.1",
+    "expo-status-bar": "1.3.0",
+    "expo-system-ui": "1.2.0",
     "react": "17.0.2",
-    "react-dom": "17.0.2",
     "react-native": "0.68.2",
-    "react-native-web": "0.17.7"
+    "react-native-gesture-handler": "2.4.2",
+    "react-native-mmkv": "2.4.1",
+    "react-native-quick-sqlite": "3.1.7",
+    "react-native-reanimated": "2.8.0",
+    "react-native-safe-area-context": "4.3.1",
+    "react-native-screens": "3.13.1",
+    "react-native-svg": "12.3.0",
+    "typeorm": "0.3.6"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9",
-    "@types/react": "~17.0.21",
-    "@types/react-native": "~0.66.13",
-    "typescript": "~4.3.5"
+    "@babel/core": "7.18.5",
+    "@babel/plugin-proposal-decorators": "7.18.2",
+    "@babel/runtime": "7.18.3",
+    "@muchobien/eslint-config-react-native": "0.1.5",
+    "@types/react": "17.0.45",
+    "@types/react-native": "0.67.8",
+    "babel-plugin-module-resolver": "4.1.0",
+    "babel-plugin-transform-typescript-metadata": "0.3.2",
+    "eslint": "8.17.0",
+    "patch-package": "6.4.7",
+    "postinstall-postinstall": "2.1.0",
+    "prettier": "2.7.0",
+    "typescript": "4.7.3"
+  },
+  "resolutions": {
+    "@types/react": "^17"
   },
   "private": true
 }
