--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,19 @@
 {
-  "extends": "expo/tsconfig.base",
+  "extends": "@muchobien/eslint-config-react-native/tsconfig.base",
   "compilerOptions": {
-    "strict": true
-  }
+    "emitDecoratorMetadata": true,
+    "experimentalDecorators": true,
+    "baseUrl": ".",
+    "paths": {
+      "@app": ["./src"],
+      "@app/*": ["./src/*"]
+    }
+  },
+  "exclude": [
+    "node_modules",
+    "babel.config.js",
+    "metro.config.js",
+    "jest.config.js",
+    "commitlint.config.js"
+  ]
 }
