--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-native": "0.68.2",
     "react-native-gesture-handler": "2.4.2",
     "react-native-mmkv": "2.4.1",
+    "react-native-primitives": "0.1.3",
     "react-native-quick-sqlite": "3.1.7",
     "react-native-reanimated": "2.8.0",
     "react-native-safe-area-context": "4.3.1",
