--- a/app.json
+++ b/app.json
@@ -26,7 +26,8 @@
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#010101"
-      }
+      },
+      "package": "dev.muchobien.finz"
     },
     "web": {
       "favicon": "./assets/favicon.png"
@@ -35,6 +36,9 @@
       "eas": {
         "projectId": "14fd962e-c4bb-455a-88ab-6fd468aaff0a"
       }
-    }
+    },
+    "plugins": [
+      "@notifee/react-native"
+    ]
   }
 }
