--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "postinstall": "patch-package",
-    "start": "expo start",
+    "start": "expo start --dev-client",
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
@@ -15,6 +15,7 @@
     "@emotion/react": "11.9.3",
     "@expo-google-fonts/inter": "0.2.2",
     "@gorhom/bottom-sheet": "4.3.2",
+    "@notifee/react-native": "5.3.0",
     "@react-navigation/bottom-tabs": "6.3.1",
     "@react-navigation/native": "6.0.10",
     "@react-navigation/native-stack": "6.6.2",
