--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react-native-safe-area-context": "4.3.1",
     "react-native-screens": "3.13.1",
     "react-native-svg": "12.3.0",
+    "react-native-zephyr": "1.0.0",
     "typeorm": "0.3.6"
   },
   "devDependencies": {
