--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react": "17.0.2",
     "react-native": "0.68.2",
     "react-native-gesture-handler": "2.5.0",
+    "react-native-get-random-values": "1.8.0",
     "react-native-mmkv": "2.4.3",
     "react-native-primitives": "0.1.3",
     "react-native-quick-sqlite": "4.0.1",
