--- a/package.json
+++ b/package.json
@@ -31,8 +31,8 @@
     "expo-splash-screen": "0.16.1",
     "expo-status-bar": "1.4.0",
     "expo-system-ui": "1.3.0",
-    "react": "17.0.2",
-    "react-native": "0.68.3",
+    "react": "18.0.0",
+    "react-native": "0.69.4",
     "react-native-gesture-handler": "2.5.0",
     "react-native-get-random-values": "1.8.0",
     "react-native-mmkv": "2.4.3",
@@ -41,7 +41,7 @@
     "react-native-reanimated": "2.9.1",
     "react-native-safe-area-context": "4.3.1",
     "react-native-screens": "3.15.0",
-    "react-native-svg": "12.4.4",
+    "react-native-svg": "13.0.0",
     "react-native-zephyr": "1.1.0",
     "typeorm": "0.3.7"
   },
@@ -50,8 +50,8 @@
     "@babel/plugin-proposal-decorators": "7.18.10",
     "@babel/runtime": "7.18.9",
     "@muchobien/eslint-config-react-native": "0.1.8",
-    "@types/react": "17.0.45",
-    "@types/react-native": "0.68.0",
+    "@types/react": "18.0.17",
+    "@types/react-native": "0.69.5",
     "babel-plugin-module-resolver": "4.1.0",
     "babel-plugin-transform-typescript-metadata": "0.3.2",
     "eslint": "8.22.0",
@@ -61,7 +61,8 @@
     "typescript": "4.7.4"
   },
   "resolutions": {
-    "@types/react": "^17"
+    "@types/react": "^17",
+    "@expo/config-plugins": "^5.0.0"
   },
   "private": true
 }
